# groovehq-cli

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
src/api/: client.rs  mod.rs
src/cli/: commands.rs  mod.rs  output.rs
src/config/: auth.rs  mod.rs
src/types/: mod.rs
tests/: api_tests.rs  cli_tests.rs
