[package]
name = "groovehq-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "groove"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
toml = "0.8"
directories = "5.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Terminal output
colored = "2.1"
comfy-table = "7.1"

# Shell completions
clap_complete = "4.4"

[dev-dependencies]
# CLI testing
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"

# API mocking
wiremock = "0.6"
