[package]
name = "groovehq-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "groove"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "time"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
toml = "0.9"
directories = "6.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Terminal output
colored = "3.0"
comfy-table = "7.2"

# Shell completions
clap_complete = "4.5"

[dev-dependencies]
# CLI testing
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.23"

# API mocking
wiremock = "0.6"
